# emerald

./: .gitignore  Cargo.toml
emerald-core/: Cargo.toml
emerald-core/src/: context.rs  emulator.rs  ffi.rs  fifo.rs  json_tests.rs  lib.rs  scheduler.rs
emerald-core/src/hw/: extensions.rs  mod.rs
emerald-core/src/hw/holly/: mod.rs  pvr.rs  sb.rs  spg.rs
emerald-core/src/hw/holly/g1/: boot_rom.rs  cdi.rs  gdi.pest  gdi.rs  gdrom.rs  mod.rs
emerald-core/src/hw/holly/g2/: mod.rs
emerald-core/src/hw/holly/g2/aica/: arm.rs  arm_bus.rs  mod.rs  rtc.rs
emerald-core/src/hw/holly/maple/: mod.rs
emerald-core/src/hw/holly/pvr/: display_list.rs  framebuffer.rs  mod.rs  ta.rs  texture_cache.rs
emerald-core/src/hw/holly/pvr/wgpu/: mod.rs  texture.rs
emerald-core/src/hw/sh4/: bsc.rs  bus.rs  ccn.rs  cpg.rs  cpu.rs  decoder.rs  dmac.rs  fpu.rs  intc.rs  mod.rs  rtc.rs  tmu.rs
emerald-sdl-ui/: Cargo.toml
emerald-sdl-ui/src/: main.rs
emerald-sdl-ui/src/gpu/: blit.wgsl  mod.rs  shader.wgsl
src/: context.rs  emulator.rs  main.rs  scheduler.rs
src/hw/: extensions.rs
src/hw/holly/: mod.rs  pvr.rs  sb.rs  spg.rs
src/hw/holly/g1/: boot_rom.rs  gdi.rs  gdrom.rs  mod.rs
src/hw/holly/maple/: mod.rs
src/hw/sh4/: bsc.rs  bus.rs  ccn.rs  cpg.rs  cpu.rs  dmac.rs  intc.rs  mod.rs  rtc.rs  tmu.rs
