[package]
name = "emerald"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = "0.8.2"
num = "0.4.1"
num-traits = "0.2.18"
once_cell = "1.19.0"
pest = "2.7.9"
pest_derive = "2.7.9"
sdl2 = "0.36.0"
spin_sleep = "1.2.0"

[features]
log_instrs = []
trace_instrs = []
log_io = []
log_bios = []
log_instrs2 = []
log_kos = []

[profile.dev] 
opt-level = 1 