[package]
name = "emerald-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
backtrace = "0.3.71"
bincode = "1.3.3"
chrono = "0.4.38"
fxhash = "0.2.1"
goblin = "0.8.2"
lending-iterator = "0.1.7"
num = "0.4.1"
num-traits = "0.2.18"
once_cell = "1.19.0"
pest = "2.7.9"
pest_derive = "2.7.9"
rect_packer = "0.2.1"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "0.20.1" }
bytemuck = { version = "1.12", features = ["derive"] }
pollster = "0.3"

[features]
log_instrs = []
trace_instrs = []
log_io = []
log_bios = []
log_kos = []
log_ints = []
log_serial = []
log_pvr = []
log_sq = []
log_dma = []
log_gdrom = []
