[package]
name = "emerald-sdl-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = { version = "0.37.0", features = ["raw-window-handle"] }
emerald-core = { path = "../emerald-core" }
glob = "0.3"
serde_json = "1.0"
wgpu = { version = "0.20.1" }
env_logger = "0.10"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }

[features]
log_instrs = []
trace_instrs = []
log_io = []
log_bios = []
log_instrs2 = []
log_kos = []
log_ints = []
log_serial = []
log_pvr = []
log_sq = []
log_dma = []
log_gdrom = []
log_bios_block = []
json_tests = []
hw_rast = []
